Fix: Remove custom cursor image because it was not aligned correctly with characters pixel position && add minor styling

--- a/src/components/Illustration/Illustration.module.css
+++ b/src/components/Illustration/Illustration.module.css
@@ -4,7 +4,6 @@
 
 .section > img {
   width: 100%;
-  cursor: url("/images/cursor-custom-image.png"), auto;
 }
 
 .dropdown {
@@ -44,6 +43,7 @@
   font-size: 1.2rem;
   padding: 0.4rem 0.8rem;
   border-radius: 5px;
+  opacity: 0.9;
 }
 
 .message.show {
@@ -55,7 +55,7 @@
 
 @keyframes flash-message {
   from {
-    opacity: 1;
+    opacity: 0.9;
     display: block;
   }
 
